--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>html5</title>
 </head>
 <body>
-<div>归来仍是少年</div>
+<div>归来仍是</div>
 <div>归来仍是少年2</div>
 <script src="bower_components/requirejs/require.js" data-main="bower_components/main"></script>
 </body>
