--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div>归来仍是</div>
-<div>归来仍是少年2</div>
+<div>归来仍是少2</div>
 <script src="bower_components/requirejs/require.js" data-main="bower_components/main"></script>
 </body>
 </html>
