--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <div>归来仍是</div>
 <div>归来仍是少2</div>
 <div>归来仍是少3</div>
+<div>归来仍是少3</div>
 <script src="bower_components/requirejs/require.js" data-main="bower_components/main"></script>
 </body>
 </html>
